projects/web/src/styles.css
:root {
  --bs-border-radius: 2px;
  --bs-border-radius-sm: 2px;
  --bs-border-radius-lg: 2px;
  --bs-primary: var(--ant-primary-color);
  --bs-primary-rgb: 24, 144, 255;
  --bs-info: var(--ant-info-color);
  --bs-info-rgb: 24, 144, 255;
  --bs-success: var(--ant-success-color);
  --bs-success-rgb: 82, 196, 26;
  --bs-warning: var(--ant-warning-color);
  --bs-warning-rgb: 250, 173, 20;
  --bs-danger: var(--ant-error-color);
  --bs-danger-rgb: 255, 77, 79;

  --app-nav-sidebar-width: 220px;
  --app-nav-sidebar-collapsed-width: 80px;
  --app-data-list-table-content-max-height: calc(100vh - 202px);
  --app-organize-unit-tree-max-height: calc(100vh - 154px);
}

/* Styles for BootStrap Icons */
.bi {
  display: inline-block;
  vertical-align: text-bottom;
  width: 1rem;
  height: 1rem;
}

.bi-xs { width: .75rem; height: .75rem; }

.bi-sm { width: .875rem; height: .875rem; }

.bi-lg { width: 1.25rem; height: 1.25rem; }

.bi-xl { width: 1.33333rem; height: 1.33333rem; }

.bi-xxl { width: 1.5rem; height: 1.5rem; }

.bi-1x { width: 1rem; height: 1rem; }
.bi-2x { width: 2rem; height: 2rem; }
.bi-3x { width: 3rem; height: 3rem; }
.bi-4x { width: 4rem; height: 4rem; }
.bi-5x { width: 5rem; height: 5rem; }
.bi-6x { width: 6rem; height: 6rem; }
.bi-7x { width: 7rem; height: 7rem; }
.bi-8x { width: 8rem; height: 8rem; }
.bi-9x { width: 9rem; height: 9rem; }
.bi-10x { width: 10rem; height: 10rem; }

.bi-spin {
  animation: bi-spin 2s linear infinite;
}

@keyframes bi-spin {
  0% { transform: rotate(0deg); }
  to { transform: rotate(1turn); }
}

html, body {
  width: 100%; height: 100%;
  margin: 0; padding: 0;
  overflow: hidden;
}

#app-root {
  display: block;
  width: 100%; height: 100%;
  margin: 0;
  padding: 0;
}

#loading-indicator {
  position: fixed;
  left: 50%;
  top: 50%;
  width: 200px;
  height: 48px;
  margin-left: -100px;
  margin-top: -50px;
  text-align: center;
  line-height: 48px;
}

.clickable {
  cursor: pointer !important;
}

.table-row-num-col {
  width: 36px;
}

.table-action-col-1 {
  width: 50px;
}

.table-action-col-2 {
  width: 84px;
}

.table-action-col-3 {
  width: 118px;
}

.table-action-col-4 {
  width: 144px;
}

.ant-card-data-list .ant-table-content {
  max-height: var(--app-data-list-table-content-max-height);
  overflow-y: auto;
}

.ant-card-data-list .ant-table-pagination.ant-pagination {
  margin: 16px 16px;
}

.ant-card-data-list .ant-card-body {
  padding: 0 !important;
}

.ant-card-data-detail {
  height: 100%;
  display: flex;
  flex-direction: column;
}

.ant-card-data-detail .ant-card-body {
  flex: 1 !important;
  display: block;
  overflow-x: auto;
  overflow-y: auto;
}

.organize-unit-tree {
  max-height: var(--app-organize-unit-tree-max-height);
  overflow: auto;
}

.organize-unit-tree .ant-tree-title {
  text-wrap: nowrap !important;
}

.cdk-overlay-container {
  z-index: 2000;
}
.cdk-global-overlay-wrapper {
  z-index: 2000;
}
.cdk-overlay-pane {
  z-index: 2000;
}
.cdk-overlay-backdrop {
  z-index: 2000;
}
.cdk-overlay-connected-position-bounding-box {
  z-index: 2000;
}
.ant-picker-dropdown {
  z-index: 2050;
}
.ant-drawer {
  z-index: 2000;
}
.ant-dropdown {
  z-index: 2050;
}
.ant-dropdown-menu-submenu-popup {
  z-index: 2050;
}
.ant-menu-submenu-popup {
  z-index: 2050;
}
.ant-mentions-dropdown {
  z-index: 2050;
}
.ant-message {
  z-index: 2010;
}
.ant-modal-mask {
  z-index: 2000;
}
.ant-modal-wrap {
  z-index: 2000;
}
.ant-notification {
  z-index: 2010;
}
.ant-popover {
  z-index: 2030;
}
.ant-select-dropdown {
  z-index: 2050;
}
.ant-tabs-dropdown {
  z-index: 2050;
}
.ant-tooltip {
  z-index: 2070;
}
.ant-image-preview-mask {
  z-index: 2000;
}
.ant-image-preview-wrap {
  z-index: 2080;
}
nz-alert.login-error-alert .ant-alert-content {
  max-height: 100px;
  overflow: auto;
}

div.ant-message div.ant-message-notice-content span.anticon {
  vertical-align: 1px !important;
}

